# SFB-GP2

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  mypy.ini  pyproject.toml  requirements-lint.txt  requirements.txt  setup.cfg
src/: Home.py
src/pages/: 1_💡_Automation.py  2_📈_Weather.py
