[metadata]
name         = SFB-GP2
version      = v1.0.1
author       = Vinko Varkas

platforms    = any
description  = Open-source running on Python 3.


classifier =
    Development Status :: Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9


[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.9.0


[options.packages.find]
include =
    src*

[options.entry_points]
console_scripts =
    hass = src.__main__:main

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-complexity = 25
doctests = True
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504,
    D100,
    D103
noqa-require-code = True